# active-vocabulary

./: Cargo.toml  docker-compose.yml  justfile
assets/: styles.css
migrations/: 20240929200828_users.sql  20240929200829_terms.sql  20240929200829_words.sql  20241002163198_learning_sessions.sql  20241002163200_examples.sql  20241002163200_examples_of_terms_usage.sql  20241002184823_example_generation_queue.sql
src/: components.rs  generation_queue.rs  gpt.rs  main.rs  models.rs
src/handlers/: mod.rs
src/html/: mod.rs
