[package]
name = "active-vocabulary"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
axum-embed = "0.1.0"
html-escape = "0.2.13"
lazy_static = "1.5.0"
rust-embed = "8.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "migrate"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
rand = { version = "0.8.5", features = [] }
